--- a/UI/src/app/app.html
+++ b/UI/src/app/app.html
@@ -1,1 +1,11 @@
-<router-outlet />
+<div class="app-container">
+    <!-- Just add the sidebar component - that's it! -->
+    <app-sidebar (sidebarToggled)="onSidebarToggle($event)"></app-sidebar>
+    <!-- Main Content -->
+    <div class="app-main-content">
+        <app-navbar></app-navbar>
+        <main class="app-content">
+            <router-outlet></router-outlet>
+        </main>
+    </div>
+</div>
